--- a/SolutionTPSynthese/ProjetTPSynthese/ProjetTPSynthese.vcxproj.filters
+++ b/SolutionTPSynthese/ProjetTPSynthese/ProjetTPSynthese.vcxproj.filters
@@ -15,12 +15,24 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Horloge.cpp">
+    <ClCompile Include="MainSynthese.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Utilitaire.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Affichage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Horloge.h">
+    <ClInclude Include="Utilitaire.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StructureFichiers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Affichage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
