--- a/SolutionTPSynthese/ProjetTPSynthese/ProjetTPSynthese.vcxproj.filters
+++ b/SolutionTPSynthese/ProjetTPSynthese/ProjetTPSynthese.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Affichage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Strings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utilitaire.h">
@@ -33,6 +36,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Affichage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Strings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Constante.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
