--- a/SolutionTPSynthese/ProjetTPSynthese/ProjetTPSynthese.vcxproj.filters
+++ b/SolutionTPSynthese/ProjetTPSynthese/ProjetTPSynthese.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Strings.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FonctionsLCRE.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utilitaire.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Constante.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FonctionsLCRE.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
