--- a/SolutionTPSynthese/ProjetTPSynthese/ProjetTPSynthese.vcxproj.filters
+++ b/SolutionTPSynthese/ProjetTPSynthese/ProjetTPSynthese.vcxproj.filters
@@ -27,7 +27,13 @@
     <ClCompile Include="Strings.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="FonctionsLCRE.cpp">
+    <ClCompile Include="VerfierErreurFichier.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ChoixSousMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Operations.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -47,7 +53,13 @@
     <ClInclude Include="Constante.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="FonctionsLCRE.h">
+    <ClInclude Include="VerfierErreurFichier.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ChoixSousMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Operations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
